<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Product extends Model
{
    use HasFactory;

    public function categories()
    {
        return $this->belongsToMany(ProductCategory::class);
    }

    public function orders()
    {
        return $this->belongsToMany(Order::class);
    }
}
