@startuml
'https://plantuml.com/class-diagram

abstract class Customer {
    - string username
    - string email
    - Order currentOrder
}


abstract class Order {
    - Product[] products
    - Boolean placed
    + addProduct()
    + removeProduct()
    + placeOrder()
}


abstract class Product {
    - ProductCategory category
    - int price
    - string name
}


abstract class ProductCategory {
    - name
    - Product[] products
}


Customer *-- Order: has
Order *- Product: has many
Product *-- ProductCategory: has many
Product --* ProductCategory: has many


@enduml
